WIP Fix: ArtifactReleaseActivity::isUrlPresent