@@ -4,8 +4,8 @@ import io.jenkins.plugins.devopsportal.utils.MiscUtils;
 import org.kohsuke.stapler.DataBoundConstructor;
 import org.kohsuke.stapler.DataBoundSetter;
 
-import java.net.URI;
-import java.net.URISyntaxException;
+import java.net.MalformedURLException;
+import java.net.URL;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -57,15 +57,15 @@ public class ArtifactReleaseActivity extends AbstractActivity {
 
     @SuppressWarnings("unused")
     public boolean isUrlPresent() {
-        if (artifactURL == null || !artifactURL.isEmpty()) {
+        if (artifactURL == null || artifactURL.trim().isEmpty()) {
             return false;
         }
         try {
             // JENSEC-1938 Restrict href protocol to only allow some https / http schemes
-            final String scheme = new URI(artifactURL).getScheme();
+            final String scheme = new URL(artifactURL).getProtocol();
             return "http".equalsIgnoreCase(scheme) || "https".equalsIgnoreCase(scheme);
         }
-        catch (URISyntaxException ex) {
+        catch (MalformedURLException ex) {
             return false;
         }
     }
